<resources>
    <string name="app_name">PrayCu</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_custom_prayer">AddCustomPrayerActivity</string>


    <!-- Pop-up Add custom prayer prayer -->

    <string name="add_prayer">Add a new custom prayer</string>
    <string name="add">Add </string>
    <string name="cancel">Cancel </string>
    <string name="custom_prayer_name">Name of prayer</string>
    <string name="name">Name</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="edit_custom_prayer">Edit custom prayer</string>
    <string name="update_text">update</string>
    <string name="starts_at">Starts at</string>
    <string name="ends_at">Ends at</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="country">country</string>
    <string name="city">city</string>

</resources>
